# UntitledGameEngine

./: AGENTS.md  CMakeLists.txt  CMakeSettings.json  README.md  UGESettings.toml  pack_assets.cmake  remove-bom.ps1
assets/3d/: teapot.mtl
assets/DATA/: platformerData.toml  platformerMap.toml
assets/Text/: sampleText.txt
assets/lua/: initApp.lua  tickingTest.lua
assets/rmlui/: window.rcss
assets/ui/: UGECore.rcss  frag_luaConsole.rml  frag_plat2dNamePlate.rml  frag_testWindow.rml  lua_tests.rml  nameplate.rcss  navButton.rcss  platformer.rml  state_assets_demo.rml  teapot_demo.rml
source/Application/: CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.h  ModuleLoader.hpp  main.cpp
source/GamePlugins/: CMakeLists.txt
source/GamePlugins/DemoGame/: CMakeLists.txt  LuaConsoleViewModel.cpp  LuaConsoleViewModel.h
source/GamePlugins/DemoGame/LuaTests/: LuaTestsScene.cpp  LuaTestsScene.h  LuaTestsViewModel.cpp  LuaTestsViewModel.h
source/GamePlugins/DemoGame/Platformer/: PlatformerCharacter.cpp  PlatformerCharacter.h  PlatformerHudViewModel.cpp  PlatformerHudViewModel.h  PlatformerNamePlateViewModel.cpp  PlatformerNamePlateViewModel.h  PlatformerScene.cpp  PlatformerScene.h  PlatformerStateTags.h  Tile.h  TileWorld.cpp  TileWorld.h
source/GamePlugins/DemoGame/StateAssetsDemo/: StateAssetsDemoScene.cpp  StateAssetsDemoScene.h  StateAssetsDemoViewModel.cpp  StateAssetsDemoViewModel.h
source/GamePlugins/TeaPot3D/: CMakeLists.txt
source/GamePlugins/TeaPot3D/Render3DLayer/: Render3DLayer.cpp  Render3DLayer.h
source/GamePlugins/TeaPot3D/TeaPotDemo/: TeaPotDemoScene.cpp  TeaPotDemoScene.h  TeaPotDemoViewModel.cpp  TeaPotDemoViewModel.h
source/GamePlugins/UIWindows/: CMakeLists.txt  WindowViewModel.cpp  WindowViewModel.h
source/GamePlugins/UIWindows/TestWindow/: TestWindowViewModel.cpp  TestWindowViewModel.h
source/UGECore/: CMakeLists.txt
source/UGECore/Private/: BoxCollisionGrid.cpp  BoxCollisionRegistry.cpp  LayerRegistry.cpp  PhysFSFileInterface.cpp  SceneRegistry.cpp  ServiceLocator.cpp  UGEApplication.cpp  ViewModelRegistry.cpp
source/UGECore/Private/Layers/: AppLayer.cpp  LoggingLayer.cpp  LuaLayer.cpp  PhysFSLayer.cpp  RmlUILayer.cpp  SDLLayer.cpp  UDEDataLayer.cpp  UGEDataLayer.cpp
source/UGECore/Private/Layers/DataStores/: DatasetStore.cpp  RuntimeStore.cpp  StoreBase.cpp  StoreSerializer.cpp
source/UGECore/Private/Sprite/: Sprite.cpp  SpriteSheet.cpp
source/UGECore/Public/: IEventHandler.h  IScriptableObject.h  LaunchSettings.h  LayerRegistry.h  PhysFSFileInterface.h  SceneRegistry.h  ScriptableObject.h  ServiceLocator.h  UGEApplication.h  UGECore_export.h  ViewModelRegistry.h  toml.hpp
source/UGECore/Public/GameClasses/: BoxCollision.h  BoxCollisionGrid.h  BoxCollisionRegistry.h  GameObjectBase.h  SceneObject.h  ViewModel.h
source/UGECore/Public/Layers/: AppLayer.h  LoggingLayer.h  LuaLayer.h  PhysFSLayer.h  RmlUILayer.h  SDLLayer.h  UDEDataLayer.h  UGEDataLayer.h
source/UGECore/Public/Layers/DataStores/: DatasetStore.h  RuntimeStore.h  StoreBase.h  StoreSerializer.h
source/UGECore/Public/Render3D/: Camera3D.h  Light3D.h  Mesh3D.h
source/UGECore/Public/Sprite/: AnimatedSprite.h  Sprite.h  SpriteSheet.h
